@@ -9,8 +9,9 @@ Description: Analysis of dichotomous and polychotomous response data using
     latent trait models under the Item Response Theory paradigm. Includes the
     multivariate two- and three-parameter logistic models, confirmatory
     bifactor analysis, polytomous confirmatory and exploratory item response
-    models, and partially-compensatory item response modeling in conjunction
-    with other IRT models.
+    models which may include nonlinear or product constructed factors, 
+	and partially-compensatory item response modeling in conjunction
+    with other IRT models. 
 Depends:
     R (>= 2.10),
     methods,
